--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="containerContents">
             <!-- Título do jogo -->
             <div class="title">
-                <h2>Pick Pock</h2>
+                <h2>Siga-me os bons!!!</h2>
             </div>
 
             <!-- Área de resultados -->
