--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <label for="aposta">Aposta: </label>
                     <input type="number" id="aposta" value="1" min="1" max="10">
                 </div>
-                <div class="winnings">
+            <!-- <div class="winnings">
                     <label for="ganhos">Ganhos: </label>
                     <input type="number" id="ganhos" value="0" readonly>
-                </div>
+                </div> -->
                 <div class="plays">
                     <label for="jogadas">Jogadas: </label>
                     <input type="number" id="jogadas" value="0" readonly>
